kubernetes/apps/kube-system/cilium/policies/allow-rathole-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-rathole-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      app: rathole-client
      io.kubernetes.pod.namespace: network
  egress:
    - toCIDR:
        - 212.227.22.223/32
      toPorts:
        - ports:
            - port: "2333"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
